* Implemented Undo/Redo on column/row resizing
* Implemented Undo/Redo on clear cell
* Another fix for merged cells (conditionnal formatting).

2000-08-19-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo for merging cells
* Fixed repainting problem when unmerging
* Fixed undo on clear cell

Summary 2000-08-19 -> 2000-08-22
Montel laurent <montell@club-internet.fr>
-----------------------------------------
* Implemented Undo For "Find and Replace"
* Implemented Undo For "Insert->series"
* Bug fix in kspread_dlg_series
* Undo works when I clear and used "find and replace" on entire row/col
* Undo works again when I changed table name

Summary 2000-08-22 -> 2000-08-25
Montel laurent <montell@club-internet.fr>
-----------------------------------------
* Implemented Undo When you used "Check Spelling"
* Fix bug when you used "Split View" :
-"Preference" works
-"Show table" works
-"Hide table" works

2000-08-25-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Fix bug when you used "Split view"
-"Remove table" works
-"change table" works

2000-08-27-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Fix bug when you changed table in "Split view" mode
-when you used kspread_dlg_formula
-when you used kspread_dlg_reference
*Fix bug when you moved on hyperlink

Summary 2000-08-27 -> 2000-08-30
Montel laurent <montell@club-internet.fr>
-----------------------------------------
* Now when you select an area (with mouse) you select all cell merged
* Now I reduce the numbre of refreshing of cell merged
* Now when you accross a merged cell it works
* fix others small fixes

Summary 2000-08-30 -> 2000-09-03
Montel laurent <montell@club-internet.fr>
-----------------------------------------
-Fix some bugs with cell merged when you used kspread_dlg_format
-Now "special paste" -> "without border" works again
-other some bugs