@@ -966,3 +966,7 @@ Montel laurent <montell@club-internet.fr>
 -Fix some bugs with cell merged when you used kspread_dlg_format
 -Now "special paste" -> "without border" works again
 -other some bugs
+
+2000-09-05-Montel laurent <montell@club-internet.fr>
+----------------------------------------------------
+* Implemented Undo for autofill
